fix size of h1 on mobile

--- a/frontend/public/styles/style.styl
+++ b/frontend/public/styles/style.styl
@@ -179,7 +179,7 @@ footer
 
     .version
         bottom 1em
-        font-size .8em
+        font-size .7em
         right 1em
         color #ccc
         position absolute
@@ -241,9 +241,9 @@ pre code
 
     h1
         line-height 1.2em
-        font-size 1em
+        font-size 1.5em
         padding 0 1em
-        margin-top 0
+        margin-top 1em
         margin-bottom 0.3em
         clear left
 
@@ -475,6 +475,9 @@ pre code
                 padding-bottom 5%
                 line-height 1.5em
                 color #666
+        .version
+            bottom 1em
+            font-size .8em
 
     .container
         padding-top 120px
